# raise

./: .eslintignore  .eslintrc.cjs  .gitignore  .gitlab-ci-Docker.yml  .gitlab-ci.yml  CITATION.cff  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  rust-toolchain.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
data/qdrant_storage/: raft_state.json
docs/_old/: README.md  json-db.md
docs/_old/architecture/: operational-runbook.md
docs/architecture/: RELEASING.md  SECURITY.md  functional-architecture.md  technical-architecture.md
docs/architecture/domain-models/: system-domain.md
docs/en/: ARCHITECTURE.md  README.md  architecture.xml
docs/fr/: ARCHITECTURE.md  README.md  architecture.xml
schemas/v1/agents/: agent-base.schema.json  agent-composite.schema.json  agent-planner.schema.json  consent-policy.schema.json  hitl.schema.json  workflow.schema.json
schemas/v1/arcadia/: README.md
schemas/v1/db/: index.schema.json
scripts/: build_plugins.sh  build_uml.sh  dataset_import.sh  dataset_init.sh  dataset_migrate_arcadia_v1.sh  generate_ctx4llm.sh  jsondb-import-dataset.sh  jsondb-import-examples.sh  jsondb-quickstart.sh  update_docs_cache.sh
src/: App copy.tsx  App.tsx  README.md  app.md
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: ai.md  mod.rs  orchestrator.rs  rag_integration_test.rs
src-tauri/src/ai/agents/: README.md  ai_agents.md  business_agent.rs  context.rs  data_agent.rs  epbs_agent.rs  hardware_agent.rs  intent_classifier.rs  mod.rs  software_agent.rs  system_agent.rs  tests.rs  transverse_agent.rs
src-tauri/src/ai/context/: README.md  ai_context.md  conversation_manager.rs  memory_store.rs  mod.rs  rag.rs  retriever.rs  tests.rs
src-tauri/src/ai/llm/: README.md  client.rs  mod.rs  prompts.rs  response_parser.rs  tests.rs
src-tauri/src/ai/memory/: README.md  mod.rs  qdrant_store.rs  tests.rs
src-tauri/src/ai/nlp/: _old_embeddings.rs  entity_extractor.rs  mod.rs  parser.rs  preprocessing.rs  tests.rs  tokenizers.rs
src-tauri/src/ai/nlp/embeddings/: candle.rs  fast.rs  mod.rs
src-tauri/src/blockchain/: blockchain.md  mod.rs
src-tauri/src/blockchain/fabric/: client.rs  mod.rs
src-tauri/src/blockchain/vpn/: innernet_client.rs  mod.rs
src-tauri/src/code_generator/: code_generator.md
src-tauri/src/code_generator/generators/: rust_gen.rs
src-tauri/src/commands/: README.md  ai_commands.rs  blockchain_commands.rs  codegen_commands.rs  cognitive_commands.rs  commands.md  genetics_commands.rs  json_db_commands.md  json_db_commands.rs  mod.rs  model_commands.md  model_commands.rs  utils_commands.rs  workflow_commands.rs
src-tauri/src/json_db/: README.md  json_db.md  mod.rs  test_utils.rs
src-tauri/src/json_db/collections/: README.md  collection.rs  manager.rs  mod.rs
src-tauri/src/json_db/indexes/: README.md  btree.rs  driver.rs  hash.rs  manager.rs  mod.rs  paths.rs  text.rs
src-tauri/src/json_db/jsonld/: README.md  context.rs  mod.rs  processor.rs  tests.rs  vocabulary.rs
src-tauri/src/json_db/query/: README.md  executor.rs  mod.rs  optimizer.rs  parser.rs  sql.rs
src-tauri/src/json_db/schema/: README.md  compute.rs  mod.rs  registry.rs  validator.rs
src-tauri/src/json_db/storage/: README.md  cache.rs  cache_manager.rs  compression.rs  file_storage.rs  mod.rs
src-tauri/src/json_db/transactions/: README.md  manager.rs  mod.rs  tests.rs  transaction.rs  wal.rs
src-tauri/src/model_engine/: common.rs  loader.rs  mod.rs  model.rs  model_engine.md  tests.rs  types.rs
src-tauri/src/model_engine/arcadia/: epbs.rs  logical_architecture.rs  metamodel.rs  mod.rs  operational_analysis.rs  physical_architecture.rs  system_analysis.rs
src-tauri/src/plugins/: cognitive.rs  mod.rs
src-tauri/src/rules_engine/: README.md  analyzer.rs  ast.rs  evaluator.rs  mod.rs  store.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/utils/: README.md  config.rs  error.rs  logger.rs  mod.rs
src-tauri/src/workflow_engine/: README.md  executor.rs  mod.rs  scheduler.rs  state_machine.rs
src-tauri/tests/: README.md  ai_suite.rs  json_db_suite.rs  json_db_tests.md  rules_suite.rs
src-tauri/tests/ai_suite/: README.md  agent_tests.rs  business_agent_tests.rs  data_agent_tests.rs  epbs_agent_tests.rs  hardware_agent_tests.rs  mod.rs  software_agent_tests.rs  system_agent_tests.rs  transverse_agent_tests.rs
src-tauri/tests/code_gen_suite/: README.md  mod.rs
src-tauri/tests/json_db_suite/: README.md  dataset_integration.rs  json_db_errors.rs  json_db_idempotent.rs  json_db_indexes_ops.rs  json_db_integration.rs  json_db_lifecycle.rs  json_db_query_integration.rs  json_db_sql.rs  mod.rs  schema_consistency.rs  schema_minimal.rs  workunits_x_compute.rs
src-tauri/tests/rules_suite/: README.md  logic_scenarios.rs  mod.rs  rules_integration.rs
src-tauri/tools/ai_cli/: Cargo.toml  README.md  ai_cli.md
src-tauri/tools/ai_cli/src/: main.rs
src-tauri/tools/jsondb_cli/: Cargo.toml  jsondb_cli.md
src-tauri/tools/jsondb_cli/src/: main.rs
src-wasm/: Cargo.toml  README.md
src-wasm/_legacy_backup/: Cargo.toml
src-wasm/blocks/analyzer-consistency/: Cargo.toml
src-wasm/blocks/analyzer-consistency/src/: lib.rs
src-wasm/core-api/: Cargo.toml
src-wasm/core-api/src/: lib.rs
src/components/: CognitiveTester.tsx  JsonDbTester.tsx  README.md
src/hooks/: README.md  useAIChat.ts  useCodeGeneration.ts  useFileSystem.ts  useModelState.ts  useRulesEngine.ts  useTauriEvent.ts
src/services/: ai-service.ts  codegenService.ts  cognitiveService.ts  file-service.ts  geneticsService.ts  model-service.ts  wasm-bridge.ts
src/store/: ai-store.ts  index.ts  model-store.ts  project-store.ts  settings-store.ts  ui-store.ts
src/types/: ai.types.ts  arcadia.types.ts  cognitive.ts  json-db.types.ts  model.types.ts
src/utils/: helpers.ts  parsers.ts  validators.ts
tools/jsondb_cli/: Cargo.toml  jsondb_cli.md
tools/jsondb_cli/src/: main.rs
wasm-modules/analyzers/: consistency_basic.wasm
(+129 files in other folders)
