[workspace]
members = [
    "src-tauri",
    "src-wasm",
    "src-tauri/tools/jsondb_cli",
    "src-tauri/tools/ai_cli",
]
resolver = "2"

# Profils valables pour tout le workspace (évitent les warnings)
[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
