[workspace]
resolver = "2"
members = [
    "src-tauri",
    "src-wasm/core-api",
    "src-wasm/blocks/*",
    "src-tauri/tools/jsondb_cli",
    "src-tauri/tools/ai_cli",
    "src-tauri/tools/validator_cli",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
thiserror = "2.0.17"
anyhow = "1.0"
wasmtime = "39.0.1"

# Profils valables pour tout le workspace (évitent les warnings)
[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
