[package]
name = "genaptitude"
version = "0.1.0"
description = "Plateforme d'Ingénierie Multi-Domaines à Interface IA Native"
authors = ["GenAptitude Team"]
license = "MIT"
edition = "2021"
repository = ""


[lib]
name = "genaptitude" # ← ou ton nom de package
path = "src/lib.rs"

[dev-dependencies]


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
walkdir = "2"
pathdiff = "0.2"
url = "2.5"
chrono = { version = "0.4", features = ["clock"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1.x", features = ["full"] }
thiserror = "2.0.17"
# CORRECTION ICI : Activation de la feature "serde" pour bincode 2
bincode = { version = "2.0.1", features = ["serde"] }
dirs = "6.0.0"
jsonschema = "0.37.2"
tempfile = "3.10"
sqlparser = "0.59.0"
regex = "1"
reqwest = { version = "0.12.24", features = ["json"] }
async-trait = "0.1"
tiktoken-rs = "0.9.1"
text-splitter = { version = "0.28.0", features = ["markdown"] }
tera = "1.19"
include_dir = "0.7"


[features]
# Utilisé pour les builds prod quand aucun dev server n'est défini
custom-protocol = ["tauri/custom-protocol"]
