[package]
name = "genaptitude"
version = "0.1.0"
description = "Plateforme d'Ingénierie Multi-Domaines à Interface IA Native"
authors = ["GenAptitude Team"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# --- Cœur Tauri ---
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"

# --- Sérialisation & Données ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }

# --- Validation & Traitement ---
regex = "1.10"

# --- Asynchrone & Runtime ---
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# --- Utilitaires Système & Fichiers ---
anyhow = "1.0"
thiserror = "2.0"
dotenvy = "0.15"
walkdir = "2"
pathdiff = "0.2"
url = "2.5"
tempfile = "3.10"

wasmtime = "40.0.0"# --- Plugins & Runtime WASM (Manquant dans la version précédente) ---

# Requis pour l'embarquement des schémas (file_storage.rs)
include_dir = "0.7"
dirs = "6.0.0"

# --- Logs & Traçabilité ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
log = "0.4"

# --- UUID & Temps ---
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
rand = "0.9.2"

# --- MOTEUR IA & NLP  ---
reqwest = { version = "0.12", features = ["json", "blocking", "multipart"] }
text-splitter = "0.28.0"
tiktoken-rs = "0.9.1"

# --- STACK IA NATIVE (CANDLE) ---
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
hf-hub = "0.4.3"
tokenizers = "0.22.2"
fastembed = "5.5.0"

# --- BASE DE DONNÉES & QUERY ---
sqlparser = { version = "0.60.0", features = ["serde"] }
qdrant-client = "1.11"

# --- GÉNÉRATION DE CODE ---
tera = "1.19"

# --- Dépendances de développement (Pour les tests) ---
[dev-dependencies]
tempfile = "3.10" # Manquant pour transactions/tests.rs
