[package]
name = "genaptitude-core-api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }
thiserror = { workspace = true }

[lib]
crate-type = [
    "rlib",
] # C'est une librairie Rust standard, pas encore du WASM final
