[package]
name = "jsondb_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"
tokio = { version = "1", features = ["full"] }

# On réutilise le code du crate Tauri/lib (modules storage)
genaptitude = { path = "../../src-tauri" }
