[package]
name = "ai_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
serde_json = "1"

# On dépend de la librairie principale pour réutiliser toute la logique AI
[dependencies.genaptitude]
path = "../.."
